--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    font-family: Helvetica,Arial,sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
 }
 
@@ -19,3 +19,6 @@ button:disabled {
     font-weight: bold;
 }
 
+*,*:before,*:after {
+    box-sizing: border-box;
+}
